# MetricsAgent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/toolchains/: mingw-w64-x86_64.cmake
config/: metrics-agent.json
include/: agent.h  config.h  http_client.h  identifiers.h  json_util.h  metrics.h  service.h
include/exporters/: exporter_json.h  exporter_otlp.h  exporter_prometheus.h
scripts/: build-linux.sh  install-service.ps1
src/: agent.cpp  config.cpp  http_client.cpp  identifiers.cpp  main.cpp  service.cpp
src/exporters/: exporter_json.cpp  exporter_otlp.cpp  exporter_prometheus.cpp
src/metrics/: cpu.cpp  disk.cpp  memory.cpp  network.cpp  users.cpp
wix/: MetricsAgent.wxs  build_msi.ps1
